--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*ng g modelo app-routing --flat --modelo=app
+ng g modelo core
+ng g modelo shared
+
+ng g modelo livros --route livros --modelo app.modelo
+ng g component livros/livro-form
+ng g component livros/livro-list
+
+ng g modelo usuarios --route usuarios --modelo app.modelo
+ng g component usuarios/usuario-form
+ng g component usuarios/usuario-list
+
+ng g modelo emprestimos --route emprestimos --modelo app.modelo
+ng g component emprestimos/emprestimo-form
+ng g component emprestimos/emprestimo-list*/
