--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div style="text-align:center">
+<div style="text-align:left">
   <h1> Biblioteca do Futuro SENAI</h1>
 </div>
 
-<nav style="display: flex; gap: 1rem; justify-content: center; margin-bottom: 2rem;">
-  <a routerLink="/livro" routerLinkActive="active">Livros</a>
-  <a routerLink="/usuario" routerLinkActive="active">Usuários</a>
+<nav style="display: flex; gap: 1rem; justify-content: left; margin-bottom: 2rem;">
+  <a routerLink="/livro" routerLinkActive="active">Livros |</a>
+  <a routerLink="/usuario" routerLinkActive="active">Usuários |</a>
   <a routerLink="/emprestimo" routerLinkActive="active">Empréstimos</a>
 </nav>
 
